deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-lab-project
  namespace: 2048-game   # ✅ Added namespace
spec:
  replicas: 2
  selector:
    matchLabels:
      app: eks-lab-project
  template:
    metadata:
      labels:
        app: eks-lab-project
    spec:
      containers:
      - name: eks-lab-project
        image: 085876626280.dkr.ecr.ap-south-1.amazonaws.com/eks-lab-project:15
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 20
