service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  type: NodePort
  selector:
    app: devops-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
