ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eks-lab-ingress
  namespace: 2048-game   # ✅ Added namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance 
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:085876626280:certificate/f653da2a-b7d8-4b4c-9c5c-8f788c1c8100
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
spec:
  rules:
    - host: eks-lab.example.soumitripathy.site
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eks-lab-service
                port:
                  number: 8080
